# devflow-kit

./: .env.example  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TARGET_REPO_SETUP.md  pyproject.toml  repo-map.json  run_agent.py
.claude/: settings.json
.claude/commands/: pr.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: graphify-onboard.yml  graphify-sync.yml  implement.yml  pages.yml  refine.yml  sync.yml
agents/: decomposition.py  implementation.py  refinement.py  sync.py  verification.py
core/: models.py
docs/: DOCUMENTATION.md  graphify-integration-plan.md  multi-provider-architecture.md  sdk-migration-guide.md
framework/: __init__.py  base_agent.py  guardrail.py  runner.py  sdk_runner.py  tool.py
framework/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py
framework/tools/: __init__.py  coding_tools.py  github_tools.py  jira_tools.py
mcp_server/: github_client.py  github_server.py  jira_client.py  jira_server.py
prompts/: decompose.md  implement.md  refine.md  verify.md
public_site/: index.html  script.js  style.css
tests/: test_agents.py  test_graph_store.py  test_graphify_cli.py  test_guardrails.py  test_repo_map_engine.py  test_runner.py  test_sync.py  test_tool.py  test_tools.py
tools/: build_prompt.py  graph_store.py  graphify_cli.py  graphify_engine.py  repo_map.py  resolve_repo.py
