[project]
name = "devflow-kit"
version = "0.1.0"
description = "AI agents that turn Jira tickets into pull requests"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Manas Rai" }]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
google = ["google-generativeai>=0.8"]
sdk = ["anthropic>=0.40", "openai>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
